@@ -38,7 +38,6 @@ PNGLibrary::PNGLibrary(const FrameBuffer& fb)
 PNGLibrary::~PNGLibrary()
 {
   delete[] ReadInfo.buffer;
-  delete[] ReadInfo.line;
   delete[] ReadInfo.row_pointers;
 }
 
@@ -115,8 +114,8 @@ void PNGLibrary::loadImage(const string& filename, FBSurface& surface)
   // We're finished reading
   png_read_end(png_ptr, info_ptr);
 
-  // Scale image to surface dimensions
-  scaleImagetoSurface(surface);
+  // Load image into the surface, setting the correct dimensions
+  loadImagetoSurface(surface);
 
   // Cleanup
 done:
@@ -258,16 +257,6 @@ bool PNGLibrary::allocateStorage(png_uint_32 w, png_uint_32 h)
 
     ReadInfo.buffer_size = req_buffer_size;
   }
-  uInt32 req_line_size = w * 3;
-  if(req_line_size > ReadInfo.line_size)
-  {
-    delete[] ReadInfo.line;
-    ReadInfo.line = new uInt32[req_line_size];
-    if(ReadInfo.line == NULL)
-      return false;
-
-    ReadInfo.line_size = req_line_size;
-  }
   uInt32 req_row_size = h;
   if(req_row_size > ReadInfo.row_size)
   {
@@ -287,53 +276,30 @@ bool PNGLibrary::allocateStorage(png_uint_32 w, png_uint_32 h)
 }
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-void PNGLibrary::scaleImagetoSurface(FBSurface& surface)
+void PNGLibrary::loadImagetoSurface(FBSurface& surface)
 {
-  // Figure out the original zoom level of the snapshot
-  // All snapshots generated by Stella are at most some multiple of 320
-  // pixels wide
-  // The only complication is when the aspect ratio is changed, the width
-  // can range from 256 (80%) to 320 (100%)
-  // The following calculation will work up to approx. 16x zoom level,
-  // but since Stella only generates snapshots at up to 10x, we should
-  // be fine for a while ...
-  uInt32 izoom = uInt32(ceil(ReadInfo.width/320.0)),
-         szoom = surface.width()/320;
+  // First determine if we need to resize the surface
+  uInt32 iw = ReadInfo.width, ih = ReadInfo.height;
+  if(iw > surface.width() || ih > surface.height())
+    surface.resize(iw, ih);
 
-  uInt32 sw = ReadInfo.width / izoom * szoom,
-         sh = ReadInfo.height / izoom * szoom;
-  sw = BSPF_min(sw, surface.width());
-  sh = BSPF_min(sh, surface.height());
-  surface.setSrcSize(sw, sh);
-  surface.setDstSize(sw, sh);
+  // The source dimensions are set here; the destination dimensions are
+  // set by whoever owns the surface
+  surface.setSrcPos(0, 0);
+  surface.setSrcSize(iw, ih);
 
-  // Decompress the image, and scale it correctly
-  uInt32 buf_offset = ReadInfo.pitch * izoom;
-  uInt32 i_offset = 3 * izoom;
+  // Convert RGB triples into pixels and store in the surface
+  uInt32 *s_buf, s_pitch;
+  surface.basePtr(s_buf, s_pitch);
+  uInt8* i_buf = ReadInfo.buffer;
+  uInt32 i_pitch = ReadInfo.pitch;
 
-  // We can only scan at most the height of the image to the constraints of
-  // the surface height (some multiple of 256)
-  uInt32 iheight = BSPF_min((uInt32)ReadInfo.height, izoom * 256);
-
-  // Grab each non-duplicate row of data from the image
-  uInt8* buffer = ReadInfo.buffer;
-  for(uInt32 irow = 0, srow = 0; irow < iheight; irow += izoom, buffer += buf_offset)
+  for(uInt32 irow = 0; irow < ih; ++irow, i_buf += i_pitch, s_buf += s_pitch)
   {
-    // Scale the image data into the temporary line buffer
-    uInt8*  i_ptr = buffer;
-    uInt32* l_ptr = ReadInfo.line;
-    for(uInt32 icol = 0; icol < ReadInfo.width; icol += izoom, i_ptr += i_offset)
-    {
-      uInt32 pixel = myFB.mapRGB(*i_ptr, *(i_ptr+1), *(i_ptr+2));
-      uInt32 xstride = szoom;
-      while(xstride--)
-        *l_ptr++ = pixel;
-    }
-
-    // Then fill the surface with those bytes
-    uInt32 ystride = szoom;
-    while(ystride--)
-      surface.drawPixels(ReadInfo.line, 0, srow++, sw);
+    uInt8*  i_ptr = i_buf;
+    uInt32* s_ptr = s_buf;
+    for(uInt32 icol = 0; icol < ReadInfo.width; ++icol, i_ptr += 3)
+      *s_ptr++ = myFB.mapRGB(*i_ptr, *(i_ptr+1), *(i_ptr+2));
   }
 }
 
@@ -394,5 +360,5 @@ void PNGLibrary::png_user_error(png_structp ctx, png_const_charp str)
 
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 PNGLibrary::ReadInfoType PNGLibrary::ReadInfo = {
-  NULL, NULL, 0, 0, 0, NULL, 0, 0, 0
+  NULL, NULL, 0, 0, 0, 0, 0
 };
