@@ -21,6 +21,10 @@
   * Added 'MDM' (Menu Driven Megacart) bankswitch scheme as described on
     AtariAge and originally developed by Edwin Blink.
 
+  * Improved snapshot viewing in the ROM launcher; snapshots are now
+    scaled to the available space, and can better accommodate sizes
+    other than those generated by Stella itself.
+
   * Removed the 'bank' command from the debugger prompt, as it only worked
     with certain bankswitch types.  The bankswitch UI should now be used
     to query/set bank state.
